--- a/LinuxSafety/LinuxSafety.html
+++ b/LinuxSafety/LinuxSafety.html
@@ -15,7 +15,7 @@
  *
  * =====================================================================================
  */ -->
-
+<!DOCTYPE html>
 <HTML>
   <head>
     <title>Linux Safety</title>
@@ -24,19 +24,19 @@
   <body>
 
   <h1>TABLE OF CONTENTS</h1>
+<ol>
+<li>HDD Encryption</li><br>
 
-<h2> 1 HDD Encryption</h2><br>
+<li>Install UFW.</li><br>
 
-<h2>2 Install UFW.</h2><br>
+<li>Intsall Clam AV</li><br>
 
-<h2>3 Intsall Clam AV</h2><br>
+<li>About Super User</li><br>
 
-<h2>4 About Super User</h2><br>
+<li>SSH Login</li><br>
+</ol>
 
-<h2> 5 SSH Login</h2><br>
-
-
-<h3> 1 HDD encryption </h3>
+<h2> 1 HDD encryption </h2>
 <p>
  At installation time, most distros will have the option to encrypt your HDD. Do it! You know
 you can get access to the data on a PC by simple using a bootable pen drive. This way your information will be more secure.
@@ -52,13 +52,13 @@ Linux does not suffer the same ilments as Windos, still "there are" some viruses
 
 
 Super user.
-
+<p>
 I recommend setting a separate password for root from your account password. Also, if several people use the same machine, do take the time to see if any of them require access to sudo.
-
+</p>
 
 
 Disable SSH root login.
-
+<P>
 Edit the sshd_config file. It is the main configuration file for the sshd service.
 Open The file at: /etc/ssh/. You need to be logged in as root.
 Look for the line #PermitRootLogin no. and un comment it. If not present, add it.
@@ -69,7 +69,7 @@ Restart the sshd service:
 
 
 Now if someone wants to hack you via SSH, they would need to know your user ID, password and root password.
-
+</p>
   </body>
 
 </HTML>
